bpo-36328: Fix compiler warning in Py_NewInterpreter() (GH-12381)